<resources>
    <string name="app_name">ورزش سافت</string>
    <string name="txt_user_name">شماره تلفن همراه </string>
    <string name="txt_password">کلمه عبور</string>
    <string name="txt_login">ورود</string>
    <string name="txt_sign_in">ثبت نام </string>
    <string name="txt_forget_password">فراموشی کلمه عبور</string>
    <string name="txt_tel_number">شماره تلفن همراه</string>
    <string name="txt_waiting_for_active_code">شماره تلفن همراه خود را وارد کنید و منتظر دریافت کد فعالسازی برنامه شوید</string>
    <string name="txt_ok">تایید</string>
    <string name="txt_code_recieve">کد ارسال شده به صورت پیامک را در کادر زیر وارد کرده و روی تایید کلیک کنید</string>
    <string name="txt_activation">فعالسازی</string>
    <string name="txt_sms_code">کد پیامک</string>
    <string name="txt_dont_recieve_code">کد را دریافت نکردم ...</string>
    <string name="txt_call_center">تماس با واحد پشتیبانی ...</string>
    <string name="txt_enter_user_info">اطلاعات کاربری خود را وارد کنید:</string>
    <string name="txt_titr_user_info">ورود اطلاعات کاربری</string>
    <string name="txt_name">نام</string>
    <string name="txt_family">نام خانوادگی</string>
    <string name="txt_national_code">کد ملی</string>
    <string name="txt_email">آدرس ایمیل</string>
    <string name="txt_re_password">تکرار کلمه عبور</string>
    <string name="txt_next">ادامه</string>
    <string name="txt_change_password">تکرار کلمه عبور</string>
    <string name="txt_enter_new_password">رمز عبور جدید خود را وارد کنید:</string>
    <string name="txt_new_password">رمز عبور جدید</string>
    <string name="txt_re_new_password">تکرار رمز عبور جدید</string>
    <string name="txt_menu_setting">تنظیمات</string>
    <string name="txt_menu_support">پشتیبانی</string>
    <string name="txt_menu_about_me">درباره ما</string>
    <string name="txt_menu_exit">خروج</string>

    <string name="font_aurulent_sans_regular" translatable="false">IRANSans</string>
    <string name="font_aurulent_sans_bold" translatable="false">IRANSans</string>
    <string name="font_aurulent_sans_bold_italic" translatable="false">IRANSans</string>
    <string name="font_aurulent_sans_italic" translatable="false">IRANSans</string>
    <string name="please_wait">لطفا منتظر بمانید...</string>
    <string name="pop_up_network_not_available">اینترنت در دسترس نیست.</string>
    <string name="syntax_exception">ساختار داده دریافتی صحیح نیست.</string>
    <string name="bad_phone_number">شماره تلفن صحیح را وارد نمائید</string>
    <string name="login_failed_server_error">خطا رخ داد. لطفا مجددا تلاش کنید.</string>
    <string name="login_failed_wrong">خطایی رخ داده است</string>
    <string name="txt_register">ثبت نام</string>
    <string name="enter_code">لطفا کد پیامک شده را وارد نمائید</string>
    <string name="code_not_true">کد فعالسازی معتبر نیست</string>
    <string name="txt_account_user">این حساب کاربری متعلق  به</string>
    <string name="txt_account_user_new">میتوانید با همان حساب کاربری وارد برنامه شوید و یا حساب جدیدی ایجاد نمائید.</string>
    <string name="txt_is">است</string>
    <string name="btn_enter_user">ورود به حساب قبلی</string>
    <string name="btn_create_account">ایجاد حساب جدید</string>
    <string name="txt_status_accout">وضعیت حساب کاربری قبلی</string>
    <string name="pop_up_ok">باشه</string>
    <string name="congratulations">تبریک</string>
    <string name="msg_success_login">شما با موفقیت وارد شدید</string>
    <string name="txt_dialog_deactive">حساب کاربری قبل غیر فعال خواهد شد، آیا ادامه می دهید؟</string>
    <string name="txt_cancel">انصراف</string>
    <string name="bad_name">لطفا نام خود را وارد کنید</string>
    <string name="bad_family">لطفا نام خانوادگی خود را وارد کنید</string>
    <string name="bad_password">لطفا کلمه عبور خود را وارد کنید</string>
    <string name="bad_repassword">لطفا تکرار کلمه عبور خود را وارد کنید</string>
    <string name="bad_pass_repass">کلمه عبور با تکرار کلمه عبور یکسان نیست</string>
    <string name="txt_error">خطا</string>
    <string name="txt_dont_register">ثبت نام انجام نشد</string>
    <string name="txt_code_dont_send">کد ارسال نشد</string>
    <string name="txt_error_in_server">خطا در سرور</string>
    <string name="txt_attention">توجه</string>
    <string name="bad_nationalCode">لطفا کد ملی را وارد نمائید</string>
    <string name="txt_password_changed">رمز عبور با موفقیت جایگزین شد</string>
    <string name="txt_login_app">ورود به برنامه</string>
    <string name="pass_or_user_is_mistake">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="user_name_is_mistake">نام کاربری را به درستی وارد کنید</string>
    <string name="password_is_null">لطفا کلمه عبور را وارد نمائید</string>
    <string name="no_data">داده ای یافت نشد</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_required">نیاز به دسترسی</string>
    <string name="cancel">انصراف</string>
    <string name="app_need_access_camera">این نرم افزار نیاز به مجوز دسترسی به دوربین دارد.</string>
    <string name="permission_granted">دسترسی اعمال شد</string>
    <string name="permission_not_granted">دسترسی اعمال نشد</string>
    <string name="kartable_manager">کارتابل مدیر</string>
    <string name="lost_internet">به اینترنت متصل نیستید</string>
    <string name="software_updating">در حال به روز رسانی برنامه</string>
    <string name="bad_phone_09">دو رقم اول شماره تلفن باید  09 باشد</string>
    <string name="Asc">صعودی</string>
    <string name="des">نزولی</string>
    <string name="txt_sort">مرتب سازی</string>
    <string name="txt_Sort">مرتب سازی</string>
    <string name="txt_filter">جستجو</string>
    <string name="no">خیر</string>
    <string name="yes">بله</string>
    <string name="txt_menu_list_factor">لیست خرید(فاکتور فروش)</string>
    <string name="txt_menu_service">خرید سرویس</string>
    <string name="txt_menu_transaction">تراکنش های مالی</string>
    <string name="txt_menu_cash">صندوق پیام ها</string>
    <string name="txt_eram">مجموعه ورزشی هتل ارم</string>
    <string name="list_service">لیست سرویس های من</string>
    <string name="enter_mobile_and_cars_number_please">اطلاعات مربوط به عضویت خود را وارد کنید</string>
    <string name="txt_card_number">شماره کارت</string>
    <string name="number_request_more_than_three">تعداد درخواست شما بیشتر از سه بار شده است</string>
    <string name="sign_in">ثبت نام</string>
    <string name="card_number_is_null">لطفا شماره کارت را وارد نمائید</string>
    <string name="lets_go">اطلاعات شما ثبت شد. اکنون می توانید وارد برنامه شوید.</string>
    <string name="all_service">همه سرویس ها</string>
    <string name="service_expired">سرویس های غیرقابل استفاده</string>
    <string name="service_no_expired">سرویس های قابل استفاده</string>
    <string name="base_expired_date">بر اساس تاریخ انقضا</string>
    <string name="txt_menu_rate">نظرسنجی</string>
    <string name="rate_set">از ثبت نظر شما متشکریم.</string>
    <string name="exit_yes">برای انصراف از ثبت نظر سنجی اطمینان دارید؟</string>
    <string name="person_rate">لطفا با انتخاب ستاره امتیاز مربوط به برخورد پرسنل را ثبت نمائید</string>
    <string name="rate">لطفا با انتخاب ستاره امتیاز مربوط به محیط مجموعه را ثبت نمائید</string>
    <string name="text_support">021-2967 داخلی (152)</string>
    <string name="sorting">مرتب سازی</string>
    <string name="filter_txt">جستجو</string>
    <string name="txt_type_message">نوع پیام</string>
    <string name="txt_message">متن</string>
    <string name="txt_message_send">ارسال پیام</string>
    <string name="day_is_not_correct">تعداد روزهای مجاز معرفی شده فراتر از حد مجاز است</string>
    <string name="user_is_not_correct">تعداد میهمانان معرفی شده فراتر از حد مجاز است</string>
    <string name="txt_gyms">سرور</string>
    <string name="server_not_selected">مجموعه ورزشی انتخاب نشده است</string>
    <string name="list_mony">کیف پول من</string>
    <string name="list_credit">امتیازات من</string>
    <string name="no_credit">شما هنوز امتیازی در این قسمت کسب نکرده اید</string>
    <string name="txt_cash">خرید</string>
    <string name="txt_organ">واحد سازمانی</string>
    <string name="cash_service">خرید سرویس</string>
    <string name="request">درخواست</string>
    <string name="club">باشگاه مشتریان</string>
    <string name="txtloyalty">جهت مشاهده موجودی و امتیاز کسب شده در باشگاه مشتریان این قسمت را انتخاب نمایید</string>
    <string name="transaction">تاریخچه تراکنش های مالی</string>
    <string name="txtTransaction">جهت مشتاهده تراکنش های مالی انجام شده از این قسمت استفاده نمایید</string>
    <string name="factorText">جهت مشاهده فاکتور های خرید به همراه جزییات آن از این قسمت استفاده نمایید</string>
    <string name="factor">تاریخچه فاکتور های خرید</string>
    <string name="txtprice">موجودی کیف پول:</string>
    <string name="ratee">امتیاز:</string>
    <string name="txt_request">ثبت درخواست</string>
    <string name="mali">مالی</string>
    <string name="sale">درخواست خرید سرویس</string>
    <string name="txtdesc">همکاران ما در اولین فرصت پس از ثبت درخواست با شما تماس خواهند گرفت</string>
    <string name="reserve">درخواست رزرو خدمات</string>
    <string name="reserveTxt">از این طریق می توانید لیست خدمات قابل انجام را مشاهده کرده و به صورت انلاین آن را رزرو نمایید</string>
    <string name="program">درخواست برنامه تمرینی</string>
    <string name="txtProgram">از این طریق میتوانید برنامه تمرینی خود را از مربیان مجموعه درخواست داده و به صورت آنلاین دریافت نمایید</string>

</resources>
