<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <include
        android:id="@+id/titrProfile"
        layout="@layout/titr" />

    <com.koohpar.eram.custom.CustomTextView
        android:id="@+id/txtDesc"
        style="@style/desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_enter_new_password"
        app:customFont="fonts/IRANSans.ttf" />

    <com.koohpar.eram.custom.CustomEditText
        android:id="@+id/txtNewPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_text"
        android:elevation="4dp"
        android:gravity="center"
        android:hint="@string/txt_new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/font_size_larg"
        android:maxLength="20"
        app:customFont="fonts/IRANSans.ttf" />

    <com.koohpar.eram.custom.CustomEditText
        android:id="@+id/txtReNewPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_text"
        android:elevation="4dp"
        android:gravity="center"
        android:hint="@string/txt_re_new_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/font_size_larg"
        android:maxLength="20"
        app:customFont="fonts/IRANSans.ttf" />

    <Button
        android:id="@+id/btnOk"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/my_button"
        android:text="@string/txt_ok" />
</LinearLayout>