<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_bg">


    <include
        android:id="@+id/titrProfile"
        layout="@layout/titr" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.koohpar.eram.custom.CustomTextView
            android:id="@+id/onvan"
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_account_user"
            app:customFont="fonts/IRANSans.ttf" />

        <com.koohpar.eram.custom.CustomTextView
            android:id="@+id/nameAccount"
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/onvan"
            android:text="بهناز"
            android:textColor="@color/blue_900"
            app:customFont="fonts/IRANSans.ttf" />

        <com.koohpar.eram.custom.CustomTextView
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_is"
            app:customFont="fonts/IRANSans.ttf" />
    </RelativeLayout>

    <com.koohpar.eram.custom.CustomTextView
        style="@style/desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_account_user_new"
        app:customFont="fonts/IRANSans.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnEnterAccount"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.09"
                android:background="@drawable/my_button"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/btn_enter_user"
                android:textSize="@dimen/font_size_small" />

            <Button
                android:id="@+id/btnNewAccount"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.09"
                android:background="@drawable/my_button"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/btn_create_account"
                android:textSize="@dimen/font_size_small" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>