<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/titrProfile"
        layout="@layout/titr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <com.koohpar.eram.custom.CustomTextView
            android:id="@+id/txtDesc"
            style="@style/desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/font_size_larg"
            android:text="@string/txt_waiting_for_active_code"
            app:customFont="fonts/IRANSans.ttf" />

        <com.koohpar.eram.custom.CustomEditText
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_text"
            android:elevation="4dp"
            android:gravity="center"
            android:hint="@string/txt_tel_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="@dimen/font_size_larg"
            android:maxLength="11"
            app:customFont="fonts/IRANSans.ttf" />

        <Button
            android:id="@+id/btnOk"
            style="@style/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/my_button"
            android:text="@string/txt_ok"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>