<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/titr"
        layout="@layout/titr" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/allUnitRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true" />

        <com.koohpar.eram.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/allUnitRadio"
            android:text="@string/all_service"
            android:textSize="@dimen/font_size_normal"
            app:customFont="fonts/IRANSans.ttf" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/myUnitRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <com.koohpar.eram.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/myUnitRadio"
            android:text="@string/service_expired"
            android:textSize="@dimen/font_size_normal"
            app:customFont="fonts/IRANSans.ttf" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/selectUnitRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <com.koohpar.eram.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/selectUnitRadio"
            android:text="@string/service_no_expired"
            android:textSize="@dimen/font_size_normal"
            app:customFont="fonts/IRANSans.ttf" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnFilter"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_button"
        android:text="@string/txt_filter" />

</LinearLayout>